--- a/mern/package.json
+++ b/mern/package.json
@@ -10,9 +10,12 @@
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "nodemon start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
