--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/bkeithbii/MERN#readme",
   "dependencies": {
+    "react-bootstrap-table-next": "^4.0.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
